{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 20,
  "lineage": "d1be3b30-0805-249c-5d0d-a4f6f3905d3b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e121f87eef3c487e",
            "arn": "arn:aws:ec2:us-east-1:238708039300:elastic-ip/eipalloc-0e121f87eef3c487e",
            "association_id": "eipassoc-0adef389dba4a8010",
            "domain": "vpc",
            "id": "eipalloc-0e121f87eef3c487e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b719c239663f13b2",
            "private_dns": "ip-10-0-0-140.ec2.internal",
            "private_ip": "10.0.0.140",
            "public_dns": "ec2-18-209-239-166.compute-1.amazonaws.com",
            "public_ip": "18.209.239.166",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-nat-eip",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "tags_all": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-nat-eip",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238708039300:internet-gateway/igw-0f1600a928b8c5cd7",
            "id": "igw-0f1600a928b8c5cd7",
            "owner_id": "238708039300",
            "region": "us-east-1",
            "tags": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-igw",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "tags_all": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-igw",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf70e9e639b6fa3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e121f87eef3c487e",
            "association_id": "eipassoc-0adef389dba4a8010",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-047006de1aaf39d56",
            "network_interface_id": "eni-0b719c239663f13b2",
            "private_ip": "10.0.0.140",
            "public_ip": "18.209.239.166",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-047c1560f834e28ce",
            "tags": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-nat",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "tags_all": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-nat",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf70e9e639b6fa3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238708039300:route-table/rtb-0eea7d234fc1021be",
            "id": "rtb-0eea7d234fc1021be",
            "owner_id": "238708039300",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-047006de1aaf39d56",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-private-rt",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "tags_all": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-private-rt",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf70e9e639b6fa3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238708039300",
            "id": "rtb-0eea7d234fc1021be",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238708039300:route-table/rtb-01bf90c1d1a6318e0",
            "id": "rtb-01bf90c1d1a6318e0",
            "owner_id": "238708039300",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1600a928b8c5cd7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-public-rt",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "tags_all": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-public-rt",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf70e9e639b6fa3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238708039300",
            "id": "rtb-01bf90c1d1a6318e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd2752a0ebe83a8",
            "region": "us-east-1",
            "route_table_id": "rtb-0eea7d234fc1021be",
            "subnet_id": "subnet-0af8493e21429538a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fb72bc9e2d6baec",
            "region": "us-east-1",
            "route_table_id": "rtb-0eea7d234fc1021be",
            "subnet_id": "subnet-0a7e98131b456e44f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbcb1cf873f84b5c",
            "region": "us-east-1",
            "route_table_id": "rtb-0eea7d234fc1021be",
            "subnet_id": "subnet-0400d366089ed9bdf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2b2ebe183dd7da8",
            "region": "us-east-1",
            "route_table_id": "rtb-01bf90c1d1a6318e0",
            "subnet_id": "subnet-047c1560f834e28ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0632b06603e9da133",
            "region": "us-east-1",
            "route_table_id": "rtb-01bf90c1d1a6318e0",
            "subnet_id": "subnet-05fdeb8cf006be2e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01be18cc2b8ac0011",
            "region": "us-east-1",
            "route_table_id": "rtb-01bf90c1d1a6318e0",
            "subnet_id": "subnet-0bfda046947a7b4f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238708039300:subnet/subnet-0af8493e21429538a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af8493e21429538a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238708039300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-private-us-east-1a",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "tags_all": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-private-us-east-1a",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf70e9e639b6fa3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238708039300",
            "id": "subnet-0af8493e21429538a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238708039300:subnet/subnet-0a7e98131b456e44f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7e98131b456e44f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238708039300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-private-us-east-1b",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "tags_all": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-private-us-east-1b",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf70e9e639b6fa3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238708039300",
            "id": "subnet-0a7e98131b456e44f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238708039300:subnet/subnet-0400d366089ed9bdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0400d366089ed9bdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238708039300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-private-us-east-1c",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "tags_all": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-private-us-east-1c",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf70e9e639b6fa3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238708039300",
            "id": "subnet-0400d366089ed9bdf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238708039300:subnet/subnet-047c1560f834e28ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047c1560f834e28ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238708039300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-public-us-east-1a",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "tags_all": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-public-us-east-1a",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf70e9e639b6fa3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238708039300",
            "id": "subnet-047c1560f834e28ce",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238708039300:subnet/subnet-05fdeb8cf006be2e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fdeb8cf006be2e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238708039300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-public-us-east-1b",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "tags_all": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-public-us-east-1b",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf70e9e639b6fa3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238708039300",
            "id": "subnet-05fdeb8cf006be2e9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238708039300:subnet/subnet-0bfda046947a7b4f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfda046947a7b4f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238708039300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-public-us-east-1c",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "tags_all": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-public-us-east-1c",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf70e9e639b6fa3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238708039300",
            "id": "subnet-0bfda046947a7b4f4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238708039300:vpc/vpc-0cf70e9e639b6fa3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0396f4be0a1b43280",
            "default_route_table_id": "rtb-0bee48135dc962d7c",
            "default_security_group_id": "sg-06c6e687597551d13",
            "dhcp_options_id": "dopt-0ec29a6753945500c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf70e9e639b6fa3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bee48135dc962d7c",
            "owner_id": "238708039300",
            "region": "us-east-1",
            "tags": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-vpc",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            },
            "tags_all": {
              "Course": "DevOps Real-world Implementation Project on AWS Cloud",
              "Demo": "VPC with Remote Backend Demo",
              "Name": "dev-vpc",
              "Owner": "Dilip Rathod",
              "Project": "retail-store",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238708039300",
            "id": "vpc-0cf70e9e639b6fa3d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}